third_party/move/move-compiler/tests/move_check/parser/missing_comma.move
module 0x42::example {
  struct Bad {
    num: u8
    num2: u8
  }
}
